# ot-harjoitustyo

./: .gitignore  README.md  pyproject.toml
dokumentaatio/: tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: game.py  game_loop.py  load_image.py  main.py  renderer.py
src/sprites/: bg.py  o.py  x.py
