[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Emma Lundström <1emma.lundstrom@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
